deploy/envoy/envoy.yaml
static_resources:
  listeners:
    - name: http_listener
      address: { socket_address: { address: 0.0.0.0, port_value: 8080 } }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: agentmesh_edge
                route_config:
                  name: agentmesh_routes
                  virtual_hosts:
                    - name: agentmesh
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: agentmesh_frontend, upgrade_configs: [{ upgrade_type: websocket }] }
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: agentmesh_frontend
      connect_timeout: 2s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: agentmesh_frontend
        endpoints:
          - lb_endpoints:
              - endpoint: { address: { socket_address: { address: frontend.agentmesh.svc.cluster.local, port_value: 80 } } }
admin:
  access_log_path: /tmp/admin_access.log
  address: { socket_address: { address: 0.0.0.0, port_value: 9901 } }
